overlays/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-airflow-ingress
  namespace: airflow
spec:
  rules:
  - host: airflow.mobagel.com
    http:
      paths:
      - backend:
          service:
            name: airflow-webserver
            port:
              name: airflow-ui
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-flower-ingress
  namespace: airflow
spec:
  rules:
  - host: airflow-flower.mobagel.com
    http:
      paths:
      - backend:
          service:
            name: airflow-flower
            port:
              name: flower-ui
        path: /
        pathType: Prefix
